<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".todoapp.TodoActivity"
        android:background="@color/todo_background_todo_app"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="35sp"
            android:text="@string/welcome"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_marginVertical="44dp"
            android:layout_marginHorizontal="32dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/categories"
            android:textSize="20sp"
            android:textColor="@color/todo_subtitle_text"
            android:layout_marginHorizontal="32dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvCategories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tasks"
            android:textSize="20sp"
            android:layout_marginTop="32dp"
            android:textColor="@color/todo_subtitle_text"
            android:layout_marginHorizontal="32dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvTasks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="32dp" />

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAddTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/add_task"
        android:src="@android:drawable/ic_input_add"
        app:tint="@color/white"
        android:backgroundTint="@color/todo_accent"
        app:fabSize="normal"
        android:layout_gravity="end|bottom"
        android:layout_margin="32dp" />

</FrameLayout>
