<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".superhero.DetailSuperHeroActivity">

    <ImageView
        android:id="@+id/ivSuperHero"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:scaleType="centerCrop" />

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:cardCornerRadius="42dp"
        android:elevation="8dp"
        android:layout_marginTop="215dp"
        tools:cardBackgroundColor="@color/teal_200">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvSuperHeroName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="28sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                tools:text="Super Hero Name"
                android:gravity="center_horizontal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:orientation="horizontal"
                android:layout_marginTop="24dp"
                android:layout_marginHorizontal="16dp"
                android:gravity="bottom">

                <View
                    android:id="@+id/vIntelligence"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@color/superhero_stat_intelligence"
                    android:layout_marginHorizontal="4dp" />

                <View
                    android:id="@+id/vStrength"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@color/superhero_stat_strength"
                    android:layout_marginHorizontal="4dp" />

                <View
                    android:id="@+id/vSpeed"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@color/superhero_stat_speed"
                    android:layout_marginHorizontal="4dp" />

                <View
                    android:id="@+id/vDurability"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@color/superhero_stat_durability"
                    android:layout_marginHorizontal="4dp" />

                <View
                    android:id="@+id/vPower"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@color/superhero_stat_power"
                    android:layout_marginHorizontal="4dp" />

                <View
                    android:id="@+id/vCombat"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@color/superhero_stat_combat"
                    android:layout_marginHorizontal="4dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="4dp"
                android:layout_marginHorizontal="16dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:singleLine="true"
                    android:maxLines="1"
                    android:layout_marginHorizontal="4dp"
                    android:text="@string/intelligence" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:singleLine="true"
                    android:maxLines="1"
                    android:layout_marginHorizontal="4dp"
                    android:text="@string/strength" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:singleLine="true"
                    android:maxLines="1"
                    android:layout_marginHorizontal="4dp"
                    android:text="@string/speed" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:singleLine="true"
                    android:maxLines="1"
                    android:layout_marginHorizontal="4dp"
                    android:text="@string/durability" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:singleLine="true"
                    android:maxLines="1"
                    android:layout_marginHorizontal="4dp"
                    android:text="@string/power" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:singleLine="true"
                    android:maxLines="1"
                    android:layout_marginHorizontal="4dp"
                    android:text="@string/combat" />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>